--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Christmas-under-three-flags-b-Being-memories-of-holiday-festivities-in-the-White-House-with-O__75118
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 75118-h/images/cover.jpg
 creator:
   author:
     agent_name: Wilcox, Mary Emily Donelson
     gutenberg_agent_id: '57844'
     url: http://www.gutenberg.org/2009/agents/57844
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75118#Christmas-under-three-flags-b-Being-memories-of-holiday-festivities-in-the-White-House-with-O_
 gutenberg_issued: '2025-01-16'
 gutenberg_type: Text
 identifiers:
